# ironing-beads-generator

./: pyproject.toml
app/core/: settings.py
