[tool.poetry]
name = "ironing beads model generator"
version = "0.1.0"
description = "Generate model for ironing beads activities"
authors = ["Laurent Bihin <laurent.bihin@gmail.com>"]
license = "MIT"
readme = "README.md"
include = []

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
